--- a/CSS/typography.css
+++ b/CSS/typography.css
@@ -10,31 +10,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Monoton&family=Sixtyfour+Convergence&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Tera:wght@100..900&family=Limelight&family=Outfit:wght@100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-/*-----------------------------------------------------------------------------------------
-  TOP NAVIGATION BAR TYPOGRAPHY         
--------------------------------------------------------------------------------------------*/
-
-.navbar .nav-link {
-  color: var(--primary-color);
-  font-size: var(--menu-font-size);
-  font-family: var(--navbar-font-family);
-  font-weight: var(--font-weight-xbold);
-  font-style: normal;
-}
-
-.navbar-nav .nav-link.active {
-  color: var(--primary-color);
-}
-
-.navbar-nav .nav-link:hover {
-  color: var(--white-color);
-}
-
-.navbar .dropdown-item {
-  color: var(--p-color);
-  font-size: var(--menu-font-size);
-  font-weight: var(--font-weight-medium);
-}
 
 /*-----------------------------------------------------------------------------------------
   GENERAL SECTIONS SETUPS TYPOGRAPHY   
@@ -43,75 +18,6 @@
 .back-top-icon {
   font-size: var(--h2-font-size);
 }
-
-.badge {
-  background-color: var(--primary-color);
-  font-size: 12px;
-  position: relative;
-  bottom: 4px;
-  padding-bottom: 6px;
-}
-
-.badge::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: -5px;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  border-right: 10px solid var(--primary-color);
-}
-
-/*-----------------------------------------------------------------------------------------
-  MAIN - HOME SECTION TYPOGRAPHY   
--------------------------------------------------------------------------------------------*/
-
-
-/*-----------------------------------------------------------------------------------------
-  BUTTONS AND BUTTON LIKE ITEMS
--------------------------------------------------------------------------------------------*/
-.song-btn {
-  background: var(--transparent);
-  line-height: normal;
-  border: .5px solid var(--secondary-color);
-  border-radius: var(--border-radius-xsm);
-  padding-top: 0.1rem;
-  /* 4px */
-  padding-bottom: 0.17rem;
-  /* 4px */
-  padding-left: .8rem;
-  /* 24px */
-  padding-right: .8rem;
-  transition: all 0.3s;
-  font-size: x-small;
-  color: var(--secondary-color);
-  font-weight: var(--font-weight-thin);
-  font-family: var(--monotype-font-family);
-  text-transform: capitalize;
-}
-
-.song-btn:hover {
-  background: var(--primary-color);
-  color: var(--white-color);
-}
-
-
-
-
-
-/*--------------------------------------------------------------------------------*/
-
-
-
-
-
-
-
-/*--------------------------------------------------------------------------------*/
-
-
-
 
 
 
